--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:16.0.5'
     implementation 'com.google.firebase:firebase-database:16.0.5'
     implementation 'com.google.firebase:firebase-storage:16.0.5'
+    implementation 'com.firebaseui:firebase-ui-database:0.4.0'
 
 
     implementation 'com.android.support:support-v4:27.1.1'
@@ -35,7 +36,7 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.0.0'
     api 'com.theartofdev.edmodo:android-image-cropper:2.4.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
-
+    implementation 'id.zelory:compressor:2.0.0'
 
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
