--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,13 +23,12 @@
         </activity>
         <activity android:name=".login.StartingActivity" />
         <activity android:name=".login.RegisterActivity" />
-        <activity android:name=".login.ExistingUserLogin">
-
-        </activity>
-        <activity android:name=".menu_item.Setting_activity">
-        </activity>
-        <activity android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
-            android:theme="@style/Base.Theme.AppCompat"/>
+        <activity android:name=".login.ExistingUserLogin"></activity>
+        <activity android:name=".menu_item.Setting_activity"></activity>
+        <activity
+            android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
+            android:theme="@style/Base.Theme.AppCompat" />
+        <activity android:name=".menu_item.AllUsersActivity"></activity>
     </application>
 
 </manifest>
