--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,12 +31,16 @@ dependencies {
 
     implementation 'com.android.support:support-v4:27.1.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.google.firebase:firebase-messaging:11.8.0'
     testImplementation 'junit:junit:4.12'
-    // Circular Image Dependency
+
+    // Image Dependency
     implementation 'de.hdodenhof:circleimageview:3.0.0'
     api 'com.theartofdev.edmodo:android-image-cropper:2.4.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'id.zelory:compressor:2.0.0'
+    implementation 'com.squareup.okhttp:okhttp:2.5.0'
+
 
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
