--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,9 @@ dependencies {
     implementation 'id.zelory:compressor:2.0.0'
     implementation 'com.squareup.okhttp:okhttp:2.5.0'
 
+//    animation
+//    implementation 'com.airbnb.android:lottie:3.0.0'
+
 
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
